<resources>
    <string name="app_name">Carman</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_gas">gas</string>
    <string name="tab_service">service</string>
    <string name="tab_stat">stat</string>
    <string name="toolbar_setting">설 정</string>
    <string name="toolbar_mycar">내차관리</string>
    <string name="toolbar_board">같이관리</string>
    <string name="toolbar_login">로그인</string>
    <string name="general_subtitle_stations">주변 주유소</string>
    <string name="general_subtitle_region">관심 지역 / 주유소</string>
    <string name="general_subtitle_expense">최근 지출 내역</string>
    <string name="general_spinner_gasoline">휘발유</string>
    <string name="general_spinner_diesel">경유</string>
    <string name="general_spinner_lpg">LPG</string>
    <string name="general_spinner_premium">고급휘발유</string>
    <string name="main_spinner_elec">충전</string>
    <string name="general_expense_gas">[ 주유지출 ]</string>
    <string name="general_expense_service">[ 서비스지출 ]</string>
    <string name="general_stations_distance">[ 거리순 ]</string>
    <string name="general_stations_price">[ 가격순 ]</string>
    <string name="general_opinet_subtitle_avgPrice">전국평균유가</string>
    <string name="general_opinet_avgPrice">Gasoline 1400</string>
    <string name="general_def_sido">서울</string>
    <string name="general_def_sigun">종로구</string>
    <string name="general_def_code">0101</string>
    <string name="general_opinet_stn_reset">다시 설정</string>
    <string name="general_label_gas_date">주유일자:</string>
    <string name="general_label_svc_date">서비스일자:</string>
    <string name="general_label_station">주유소:</string>
    <string name="general_label_svc_provider">서비스센터:</string>
    <string name="general_label_mileage">운행거리:</string>
    <string name="general_label_gas_amount">주유량:</string>
    <string name="general_label_gas_payment">주유금액:</string>
    <string name="general_label_svc_items">서비스내역:</string>
    <string name="general_label_svc_payment">서비스비용:</string>
    <string name="general_no_gas_history">최근 주유 이력이 없습니다</string>
    <string name="general_no_svc_history">최근 정비 이력이 없습니다</string>
    <string name="mainl_no_station">주유소 없습니다</string>
    <string name="main_stn_price">가격:</string>
    <string name="main_stn_distance">거리:</string>
    <string name="main_station_facility">부대시설:</string>
    <string name="general_snackkbar_inbounds">같은 구역입니다. 잠시 후 다시 확인하여 주세요</string>
    <string name="general_carwash_yes">가능</string>
    <string name="general_carwash_no">불가</string>
    <string name="main_no_station_fetched">미터 반경에서 주유소를 찾을 수 없습니다\n 탐색 반경을 변경해 주세요</string>
    <string name="main_index_reset">변경</string>
    <string name="general_no_location">현재 위치 정보를 찾을 수 없습니다.\n버튼을 눌려서 현재위치를 업데이트해 주세요.</string>
    <string name="main_general_no_service">준비중입니다</string>
    <string name="main_ev_chgrtype">타입:</string>
    <string name="main_ev_access_limt">이용제한:</string>
    <string name="main_ev_no_limit">없음</string>
    <string name="main_hydro_chgr_num">충전기</string>
    <string name="main_hydro_bizhour">운영시간</string>
    <string name="main_hydro_close">운영중단</string>
    <string name="main_hydro_phone">연락처</string>
    <string name="main_chgr_label_start">충전시작:</string>
    <string name="main_chgr_label_last">충전종료:</string>
    <string name="main_chgr_label_reason">사유:</string>
    <string name="main_chgr_label_output">충전기타입:</string>
    <string name="main_chgr_label_update">갱신시간:</string>
    <string name="main_chgr_state_free">충전대기</string>
    <string name="main_chgr_state_occupied">충전중</string>
    <string name="main_chgr_state_nosignal">상태미확인</string>
    <string name="main_chgr_state_disconntected">통신이상</string>
    <string name="main_chgr_state_inspect">점검중</string>
    <string name="main_chgr_state_shutdown">운영중지</string>
    <string name="main_chgr_no_data">정보없음</string>
    <string name="main_subtitle_news">알립니다</string>
    <string name="main_subtitle_expense">월 지출</string>
    <string name="main_subtitle_exp_config">지출 구성</string>
    <string name="main_subtitle_gas">주유내역 </string>
    <string name="main_subtitle_wash">세차내역</string>
    <string name="main_subtitle_extra">기타지출</string>
    <string name="main_subtitle_svc">서비스내역</string>
    <string name="main_subtitle_tip">오토라이프 \&amp;</string>
    <string name="main_no_data">n/a</string>
    <string name="main_subtitle_collapsed">평균</string>
    <string name="main_footer_terms">이용약관</string>
    <string name="main_footer_policy">개인정보보호정책</string>
    <string name="main_footer_services">전체서비스</string>
    <string name="main_footer_company">SILVERBACK TRUST</string>
    <string name="map_toolbar_title">주유소 위치 및 정보</string>
    <string name="map_cardview_cvs">편의점:</string>
    <string name="map_cardview_service">정 비:</string>
    <string name="map_cardview_wash">세 차:</string>
    <string name="map_value_yes">있음</string>
    <string name="map_value_no">없음</string>
    <string name="map_value_ok">가능</string>
    <string name="map_value_not_ok">불가</string>
    <string name="exp_toolbar_title">내차 관리</string>
    <string name="exp_title_gas">주유/세차 관리</string>
    <string name="exp_title_service">정비/점검 관리</string>
    <string name="exp_title_stat">지출내역 보기</string>
    <string name="exp_label_odometer">주행 거리</string>
    <string name="exp_menu_save">저장</string>
    <string name="exp_snackbar_favorite_limit">즐겨찾기는 10개까지 지정할 수 있습니다</string>
    <string name="exp_ratingbar_reset">취소</string>
    <string name="toast_expense_no_data">최근 데이터가 없습니다</string>
    <string name="gas_subtitle_expense">주유 지출</string>
    <string name="gas_label_date">주유날짜</string>
    <string name="gas_label_station">주 유 소</string>
    <string name="gas_label_expense">주 유 비</string>
    <string name="gas_label_amount">주 유 량</string>
    <string name="gas_subtitle_extra_expense">세차 및 기타 지출</string>
    <string name="gas_label_expense_wash">세차비</string>
    <string name="gas_label_expense_misc">기타지출</string>
    <string name="gas_subtitle_evaluation">주유소 평가하기</string>
    <string name="gas_label_evaluation">주유소 평점</string>
    <string name="tv_label_comment">평가 한마디</string>
    <string name="gas_btn_change">수정</string>
    <string name="gas_value_null">0</string>
    <string name="toast_station_name">주유소 이름을 입력해 주세요</string>
    <string name="toast_payment">주유 금액을 입력해 주세요</string>
    <string name="toast_unit_price">리터당 가격을 입력해 주세요</string>
    <string name="toast_save_success">저장하였습니다</string>
    <string name="toast_save_fail">저장하지 못하였습니다</string>
    <string name="gas_hint_no_station">주유소 위치가 아닙니다</string>
    <string name="gas_hint_extra_expense">지출내역</string>
    <string name="gas_msg_empty_name">주유소 이름을 입력해 주세요</string>
    <string name="gas_snackbar_add_favorite">즐겨찾는 주유소에 추가합니다</string>
    <string name="gas_snackbar_favorite_added">즐겨찾는 주유소로 등록되었습니다</string>
    <string name="gas_snackbar_alert_remove_favorite">즐겨찾는 주유소에서 제외합니다</string>
    <string name="gas_snackbar_favorite_removed">즐겨찾는 주유소에서 제외되었습니다</string>
    <string name="gas_snackbar_action_confirm">확인</string>
    <string name="svc_label_date">정비 일자</string>
    <string name="svc_label_provider">정비 업체</string>
    <string name="svc_label_mileage">운행 거리</string>
    <string name="svc_label_payment">전체 비용</string>
    <string name="svc_subtitle_stmts">서비스 체크리스트</string>
    <string name="svc_label_period">교체 주기:</string>
    <string name="svc_spinner_mileage">운행거리</string>
    <string name="svc_spinner_date">경과기간</string>
    <string name="svc_label_cost">소요 비용</string>
    <string name="svc_label_info">추가 정보</string>
    <string name="svc_btn_modify">수정</string>
    <string name="svc_snackbar_stnname">정비 업체명을 입력해 주세요</string>
    <string name="svc_snackbar_mileage">누적 운행거리를 입력해 주세요</string>
    <string name="svc_snackbar_cost">정비/점검 내역이 입력되지 않았습니다</string>
    <string name="svc_snackbar_alert_remove_favorite">즐겨찾는 서비스센터에서 제외합니다</string>
    <string name="svc_snackbar_favorite_removed">즐겨찾는 서비스센터에서 제외되었습니다</string>
    <string name="svc_msg_add_favorite">즐겨찾는 서비스센터에 추가되었습니다</string>
    <string name="service_dialog_label_memo">메 모:</string>
    <string name="svc_msg_empty_name">서비스센터 이름을 입력해 주세요</string>
    <string name="svc_msg_registration">서비스센터를 먼저 등록해 주세요</string>
    <string name="svc_btn_eval">등록</string>
    <string name="svc_register_title">즐겨찾는 서비스센터</string>
    <string name="svc_radiobtn_period">기간</string>
    <string name="svc_radiobtn_mileage">거리</string>
    <string name="dialog_label_location">현재위치</string>
    <string name="dialog_label_district">지 역</string>
    <string name="dialog_label_addrs">상세주소</string>
    <string name="dialog_label_company">회사이름</string>
    <string name="dialog_label_phone">연락처</string>
    <string name="dialog_label_evaluation">서비스평가</string>
    <string name="graph_x_axis_month">월</string>
    <string name="graph_y_axis_unit">천원</string>
    <string name="stat_subtitle">지출 내역</string>
    <string name="stat_header_date">날짜</string>
    <string name="stat_header_milegae">거리(km)</string>
    <string name="stat_header_payment">금액(원)</string>
    <string name="stat_header_provider">장 소</string>
    <string name="stat_spinner_all">전체</string>
    <string name="stat_spinner_gas">주유비</string>
    <string name="stat_spinner_service">서비스</string>
    <string name="board_general_title">카르맨 라운지</string>
    <string name="board_title_write">포스트 작성</string>
    <string name="board_title_edit">포스트 편집</string>
    <string name="board_report">신고</string>
    <string name="board_tab_title_recent">최근글</string>
    <string name="board_tab_title_popular">인기글</string>
    <string name="board_tab_title_autoclub">오토클럽</string>
    <string name="board_tab_title_notification">공지사항</string>
    <string name="board_filter_title">나의클럽</string>
    <string name="board_filter_chkbox_general">일반글</string>
    <string name="board_filter_brand">브랜드</string>
    <string name="board_filter_model">모델명</string>
    <string name="board_filter_type">타입</string>
    <string name="board_filter_year">연식</string>
    <string name="board_autoclub_set">설정 에서 클럽정보를 입력해주세요</string>
    <string name="board_filter_club">클럽</string>
    <string name="board_filter_link">입력</string>
    <string name="board_autoclub_sort_time">최근포스트</string>
    <string name="board_autoclub_sort_view">관심포스트</string>
    <string name="board_msg_username">사용자(차량)이름을 만들어주세요</string>
    <string name="board_msg_action_setting">설정</string>
    <string name="board_emptyview">첫번째 글의 주인공이 되어 주세요</string>
    <string name="board_msg_cancel_write">포스트 작성을 취소합니다</string>
    <string name="board_msg_cancel_edit">포스트 편집을 취소합니다</string>
    <string name="board_write_toolbar_title">게시글 작성</string>
    <string name="board_edit_toolbar_title">게시글 편집</string>
    <string name="board_write_post_title">제 목:</string>
    <string name="board_write_hint_content">내 용:</string>
    <string name="board_msg_image">이미지 첨부는 최대 <b>%d</b>개까지 가능합니다</string>
    <string name="board_write_category">분 류</string>
    <string name="board_msg_no_title">글의 제목을 넣어주세요</string>
    <string name="board_msg_no_content">글의 본문이 없습니다</string>
    <string name="board_msg_optimize_image">첨부이미지 최적화</string>
    <string name="board_msg_uploading">업로드 진행중입니다</string>
    <string name="board_msg_downsize_image">이미지 최적화중입니다</string>
    <string name="board_comment_header">댓 글</string>
    <string name="board_comment_switch">보임/가림</string>
    <string name="board_comment_reply">답 글</string>
    <string name="board_comment_reply_writing">답글쓰기</string>
    <string name="board_comment_popup_item1">삭 제</string>
    <string name="board_comment_popup_item2">공 유</string>
    <string name="board_comment_popup_item3">신 고</string>
    <string name="pref_entry_void">설정안함</string>
    <string name="pref_auto_maker">제조사/브랜드</string>
    <string name="pref_auto_type">차량 타입</string>
    <string name="pref_engine_type">엔진 타입</string>
    <string name="pref_auto_model">모델 이름</string>
    <string name="pref_auto_year">생산년도(연식)</string>
</resources>