<?xml version="1.0" encoding="utf-8"?>
<!--
The simplest way to do this is just to have Android do it for you. Assuming you want the summary
to match the selected value, you can simply set the summary of the ListPreference to "%s" using
either XML or the setSummary method in Java.
-->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" >
    <ListPreference
        app:key="carman_pref_automaker"
        app:title="@string/pref_auto_maker"
        app:summary="@string/pref_entry_void"
        app:useSimpleSummaryProvider="true"/>
    <ListPreference
        app:key="carman_pref_autotype"
        app:enabled="false"
        app:title="@string/pref_auto_type"
         />
    <ListPreference
        app:key="carman_pref_enginetype"
        app:enabled="false"
        app:title="@string/pref_engine_type"
         />
    <ListPreference
        app:key="carman_pref_automodel"
        app:enabled="false"
        app:title="@string/pref_auto_model"
         />
    <ListPreference
        app:key="carman_pref_autoyear"
        app:enabled="false"
        app:title="@string/pref_auto_year"
         />
</PreferenceScreen>
<!--
Setting a summary with a String formatting marker is no longer supported.
You should use a SummaryProvider instead.

app:summary="%s" means that summary reads the selected value.
-->