<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_popup_1"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/board_comment_popup_item1"
        android:textSize="@dimen/extraSmallText"
        android:onClick="onClick"/>
    <TextView
        android:id="@+id/tv_popup_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/board_comment_popup_item2"
        android:textSize="@dimen/extraSmallText"
        android:onClick="onClick"/>
    <TextView
        android:id="@+id/tv_popup_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/board_comment_popup_item3"
        android:textSize="@dimen/extraSmallText"
        android:onClick="onClick"/>
</LinearLayout>